--- a/m/my/withdraw.html
+++ b/m/my/withdraw.html
@@ -17,7 +17,7 @@
 				<div class="weui-cell__hd">
 					<p>银行卡</p>
 				</div>
-				<a class="weui-cell__bd weui-cell_primary weui-cell_link" onclick="$('#card-list).addClass('page_show')">
+				<div class="weui-cell__bd weui-cell_primary weui-cell_link" onclick="$('#card-list).addClass('page_show')">
 
 						<!--                         <div class="weui-media-box__hd">
 							<img class="weui-media-box__thumb" src="../../images/icon_nav_panel.png" alt="">
@@ -30,7 +30,7 @@
 						</div> -->
 					<p id="bank_acct"></p>
 					<input type="hidden" id="rec_id" name="rec_id" value="" required="required" title="银行卡">
-				</a>
+				</div>
 			</div>
 			<div class="weui-cells__title">提现金额</div>
 			<div class="weui-cells">
@@ -107,7 +107,7 @@
     <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
     <script id="card-templ" type="text/html">
         {{each rows as row i}}
-        <div class="weui-media-box weui-media-box_appmsg" onclick="SelectCard()">
+        <div class="weui-media-box weui-media-box_appmsg">
 			<div class="weui-media-box__hd">
 				<i class="icon-bank-card" style="width: 60px; height: 60px;"></i>
 			</div>
