--- a/m/my/withdraw.html
+++ b/m/my/withdraw.html
@@ -17,7 +17,7 @@
 				<div class="weui-cell__hd">
 					<p>银行卡</p>
 				</div>
-				<div class="weui-cell__bd weui-cell_primary weui-cell_link" onclick="$('#card-list).addClass('page_show')">
+				<div class="weui-cell__bd weui-cell_primary weui-cell_link" onclick="$('#card-list').addClass('page_show')">
 
 						<!--                         <div class="weui-media-box__hd">
 							<img class="weui-media-box__thumb" src="../../images/icon_nav_panel.png" alt="">
