--- a/m/my/withdraw.html
+++ b/m/my/withdraw.html
@@ -160,12 +160,12 @@
 					onInput: function() {
 						console.log(this, arguments);
 					},
-					onClickItem: function(row) {
+					onClickItem: function(obj, row, this) {
 						console.log(this, arguments);
 						$('#bank_acct').text('('+row.bank_acct_no+')');
 						$('#rec_id').val(rows.rec_id);
 						$('#card-list').removeClass('page_show');
-						$('#withdraw').addClass('page_show')
+						$('#withdraw').addClass('page_show');
 					}
 				}).search();
 			}
