--- a/m/my/bank-card.html
+++ b/m/my/bank-card.html
@@ -95,8 +95,8 @@
 		onInput: function() {
 			console.log(this, arguments);
 		},
-		onClickItem: function(obj, row, this) {
-			console.log(this, arguments);
+		onClickItem: function(row) {
+			console.log(arguments);
 		}
 	}).search();
     $(function() {
