--- a/m/busi/mchnt-base-info.html
+++ b/m/busi/mchnt-base-info.html
@@ -91,7 +91,7 @@
                         <label class="weui-label">所在地区<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input" type="text" name="district_name" required="" placeholder="请选择所在地区" id="city-picker">
+                        <input class="weui-input" type="text" name="district_name" required="" placeholder="请选择所在地区" id="city-picker" readonly>
                         <input type="hidden" name="province">
                         <input type="hidden" name="city">
                         <input type="hidden" name="district">
