--- a/m/busi/steps/fee.html
+++ b/m/busi/steps/fee.html
@@ -55,8 +55,8 @@
                 </div>
             </div>
             <div class="weui-btn-area btn-area">
-                <a id="back-btn" href="javascript:" class="weui-btn weui-btn_default" onclick="weui.page.back()">返回</a>
-                <a id="submit-btn" href="javascript:" class="weui-btn weui-btn_primary">提交</a>
+                <a id="back-btn" href="javascript:" class="weui-btn weui-btn_default" onclick="weui.page.back()">上一步</a>
+                <a id="submit-btn" href="javascript:" class="weui-btn weui-btn_primary">下一步</a>
             </div>
         </form>
     </div>
@@ -65,11 +65,16 @@
     <script type="text/javascript" src="../../js/lib/weuijs/weuijs.min.js"></script>
     <script>
     var query = $$.parseQueryString();
-
+	var hash = window.location.hash;
+		
     function onSubmit() {
         if (!weui.form.validate('#form', $$.rules)) return;
         var param = $('#form').serializeObject();
-
+		if (hash.substr(0, 6) == '#step/') {
+            var arr = hash.substr(6).split('/');
+			param['flow'] = arr[0];
+			param['step'] = parseInt(arr[1]);
+		}
         param = $.extend({}, query, param);
 
         $$.request('/action/bm/mchnt-param/save-mchnt', param, {
@@ -84,8 +89,24 @@
             }
         });
     }
+		
+	function LoadForm() {
+		if(query.mchnt_id && query.mchnt_id != "" &&
+		  	query.mchnt_param_id && query.mchnt_param_id != "") {
+			$$.request('/action/bm/mchnt-param/view', query, {
+				success: function(data) {
+					if (data.errcode == 0) {
+						weui.form.load('#form', data.data);
+					} else {
 
+					}
+				},
+				error: function() {}
+			});
+		}
+	}
     $(function() {
+		LoadForm();
     	var value = query.busi_type;
         $('#debit-card-fee-cell,#credit-card-fee-cell,#fee-cell').addClass('hide');
         if (value == 'DMF') {
