--- a/m/index.html
+++ b/m/index.html
@@ -44,11 +44,11 @@
                     </div>
                     <p class="weui-grid__label">终端管理</p>
                 </a>
-                <a href="javascript:;" class="weui-grid">
+                <a href="busi/routine.html" class="weui-grid">
                     <div class="weui-grid__icon">
                         <img src="images/icon_nav_actionSheet.png" alt="">
                     </div>
-                    <p class="weui-grid__label">&nbsp;</p>
+                    <p class="weui-grid__label">待办事务</p>
                 </a>
                 <a href="javascript:;" class="weui-grid">
                     <div class="weui-grid__icon">
