--- a/m/busi/routine.html
+++ b/m/busi/routine.html
@@ -36,8 +36,8 @@
         </div>
     </div>
     <!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=mUs8UNiHRImGLNueae1Gd9PVdejrYdHC"></script> -->
-    <script type="text/javascript" src="../../js/lib/zepto.min.js"></script>
-    <script type="text/javascript" src="../../js/lib/weuijs/weuijs.min.js"></script>
+    <script type="text/javascript" src="../js/lib/zepto.min.js"></script>
+    <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
     <script id="list-template" type="text/html">
         {{each rows as row i}}
         <a class="weui-cell weui-cell_access searchbar-result__item" href="javascript:;" data-index="{{total+i}}">
