--- a/m/busi/routine.html
+++ b/m/busi/routine.html
@@ -44,13 +44,12 @@
             <div class="weui-cell__bd weui-cell_primary">
                 <p>{{row.mchnt_name}}</p>
             </div>
-            <div class="weui-cell__ft" style="color:#f6383a;">{{row.proc_st_nm}}</div>
         </a>
         <div class="weui-media-box weui-media-box_text">
-            <div class="weui-media-box__desc">商户号：{{row.mchnt_cd}}</div>
-            <div class="weui-media-box__desc">收单机构：{{row.acq_inst_nm}}</div>
-            <div class="weui-media-box__desc">开户行：{{row.account_bank_branch_nm}}</div>
-			<div class="weui-media-box__desc">业务类型：{{row.busi_type_nm}}</div>
+            <div class="weui-media-box__desc">联系人：{{row.linkman}}</div>
+            <div class="weui-media-box__desc">联系方式：{{row.acq_inst_nm}}</div>
+            <div class="weui-media-box__desc">地址：{{row.addr}}</div>
+			<div class="weui-media-box__desc">业务类型：{{row.busi_type}}</div>
             <ul class="weui-media-box__info">
                 <li class="weui-media-box__info__meta">创建时间：{{row.created_time}}</li>
 				<li class="weui-media-box__info__meta weui-media-box__info__meta_extra">创建人：{{row.last_created_by_nm}}</li>
