--- a/m/busi/routine.html
+++ b/m/busi/routine.html
@@ -41,13 +41,14 @@
     <script id="list-template" type="text/html">
         {{each rows as row i}}
         <a class="weui-cell weui-cell_access searchbar-result__item" href="javascript:;" data-index="{{total+i}}">
+			<div class="weui-cell__hd>
+				<p>{{row.linkman}}</p>
+			</div>
             <div class="weui-cell__bd weui-cell_primary">
-                <p>{{row.mchnt_name}}</p>
+                <p>{{row.telno}}</p>
             </div>
         </a>
         <div class="weui-media-box weui-media-box_text">
-            <div class="weui-media-box__desc">联系人：{{row.linkman}}</div>
-            <div class="weui-media-box__desc">联系方式：{{row.acq_inst_nm}}</div>
             <div class="weui-media-box__desc">地址：{{row.addr}}</div>
 			<div class="weui-media-box__desc">业务类型：{{row.busi_type}}</div>
             <ul class="weui-media-box__info">
@@ -124,7 +125,11 @@
 					acq_inst_id: row.acq_inst_id,
 					busi_type: row.busi_type
 				};
-				flows.start(row.flow, params, row.step);
+				if(row.step == 0) {
+					flows.busi.start(row.busi_type, row.acq_inst_id,);
+				} else {
+					flows.start(row.flow, params, row.step);
+				}
 			}
 		}];
 		weui.actionSheet(actions, [{
