--- a/m/busi/steps/fee.html
+++ b/m/busi/steps/fee.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="weui-btn-area btn-area">
-                <a id="back-btn" href="javascript:" class="weui-btn weui-btn_default" onclick="weui.page.back()">上一步</a>
+                <a id="back-btn" href="javascript:" class="weui-btn weui-btn_default" onclick="prev()">上一步</a>
                 <a id="submit-btn" href="javascript:" class="weui-btn weui-btn_primary">下一步</a>
             </div>
         </form>
@@ -89,6 +89,10 @@
             }
         });
     }
+		
+	function prev() {
+		flows.prev(query);
+	}
 		
 	function LoadForm() {
 		if(query.mchnt_id && query.mchnt_id != "" &&
