--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div class="weui-btn-area btn-area">
-                <a id="back-btn" href="javascript:" class="weui-btn weui-btn_default" onclick="weui.page.back()">上一步</a>
+                <a id="back-btn" href="javascript:" class="weui-btn weui-btn_default" onclick="prev()">上一步</a>
                 <a id="submit-btn" href="javascript:" class="weui-btn weui-btn_primary">下一步</a>
             </div>
         </form>
@@ -156,6 +156,10 @@
         });
     }
 
+	function prev() {
+		flows.prev(query);
+	}
+		
     function onSubmit() {
         if (!weui.form.validate('#form', $$.rules)) return;
         var param = $('#form').serializeObject();
