--- a/m/busi/routine.html
+++ b/m/busi/routine.html
@@ -126,7 +126,7 @@
 					busi_type: row.busi_type
 				};
 				if(row.step == 0) {
-					flows.busi.start(row.busi_type, row.acq_inst_id,);
+					flows.busi.start(row.busi_type, row.acq_inst_id);
 				} else {
 					flows.start(row.flow, params, row.step);
 				}
