--- a/m/index.html
+++ b/m/index.html
@@ -44,7 +44,7 @@
                     </div>
                     <p class="weui-grid__label">终端管理</p>
                 </a>
-                <a href="busi/routine.html" class="weui-grid">
+                <a href="busi/steps/routine.html" class="weui-grid">
                     <div class="weui-grid__icon">
                         <img src="images/icon_nav_actionSheet.png" alt="">
                     </div>
