--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -205,27 +205,30 @@
 				},
 				error: function() {}
 			});
-			
+			/*
 			$('#form').find('.weui-uploader__files').each(function(i, element) {
 				$(element).html('');
 			});
 			var itemTpl = '<li class="weui-uploader__file weui-uploader__file_status" data-id="{{id}}"><div class="weui-uploader__file-content"><i class="weui-loading" style="width: 30px;height: 30px;"></i></div></li>';
-			$$.request('/action/bm/mchnt-elec-info/search', query, {
+			$$.request('/action/bm/mchnt-elec-info/list', query, {
 				success: function(data) {
 					if (data.errcode == 0) {
 						$.each(data.rows, function(index, item) {
 							var file = $($.render(itemTpl, {
 								id: index+1
 							}));
-							uploaderData.push({
-								status: '1',
-								serverid: item.file_url,
-								elec_info_type: item.elec_info_type,
-								rec_id: item.rec_id
-							});
-							file.css({
-								backgroundImage: 'url("' + item.file_url + '")'
-							});
+							$$.request('/action/bm/mchnt-elec-info/list', query, {
+								$('#form').find('.weui-uploader[data-type='+item.elec_info_type+']').find('.weui-uploader__files').append(file);
+								file.css({
+									backgroundImage: 'url("' + item.file_url + '")'
+								});
+								uploaderData.push({
+									status: '1',
+									serverid: item.serverid,
+									elec_info_type: item.elec_info_type,
+									rec_id: item.rec_id
+								});
+							}
 						});
 					} else {
 
@@ -233,6 +236,7 @@
 				},
 				error: function() {}
 			});
+			*/
 		}
 	}
 		
