--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -194,7 +194,8 @@
     }
 
 	function LoadForm() {
-		if(query.mchnt_id && query.mchnt_id != "") {
+		if(query.mchnt_id && query.mchnt_id != "" &&
+		  	query.mchnt_param_id && query.mchnt_param_id != "") {
 			$$.request('/action/bm/mchnt-base-info/view', query, {
 				success: function(data) {
 					if (data.errcode == 0) {
