--- a/m/busi/steps/select-busi.html
+++ b/m/busi/steps/select-busi.html
@@ -35,6 +35,32 @@
             </div> -->
         </div>
     </div>
+    
+    <div id="page2" class="page page_show">
+        <div class="weui-cells__title">选择收单机构</div>
+        <div class="weui-search-bar">
+            <a href="javascript:" class="search-bar__btn" onclick="back()">返回</a>
+            <form class="weui-search-bar__form" method="post" action="">
+                <div class="weui-search-bar__box">
+                    <i class="weui-icon-search"></i>
+                    <input type="search" class="weui-search-bar__input" name="search" placeholder="搜索">
+                    <a href="javascript:" class="weui-icon-clear"></a>
+                </div>
+                <label class="weui-search-bar__label">
+                    <i class="weui-icon-search"></i>
+                    <span>搜索</span> </label>
+            </form>
+            <a href="javascript:" class="weui-search-bar__cancel-btn">取消</a>
+        </div>
+        <div class="weui-cells searchbar-result">
+            <!-- <div class="weui-cell weui-cell_access">
+                <div class="weui-cell__bd weui-cell_primary">
+                    <p>实时搜索文本</p>
+                </div>
+            </div> -->
+        </div>
+    </div>
+    
     <!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=mUs8UNiHRImGLNueae1Gd9PVdejrYdHC"></script> -->
     <script type="text/javascript" src="../../js/lib/zepto.min.js"></script>
     <script type="text/javascript" src="../../js/lib/weuijs/weuijs.min.js"></script>
@@ -50,13 +76,28 @@
         </div>
         {{/each}}
     </script>
+    <script id="acq-template" type="text/html">
+        {{each rows as row i}}
+        <div class="weui-cell weui-cell_access searchbar-result__item" data-index="{{total+i}}">
+            <div class="weui-cell__bd weui-cell_primary">
+                <p>
+                    {{row.acq_inst_nm}}
+                </p>
+            </div>
+            <div class="weui-cell__ft"></div>
+        </div>
+        {{/each}}
+    </script>
     <script>
     var query = $$.parseQueryString();
 	
-	weui.select2({
-		title: '搜索收单机构',
-		valueField: 'acq_inst_id',
-		textField: 'acq_inst_nm',
+	function back() {
+		window.location.href = 'base.html?' + $.param({
+			mchnt_id: query.mchnt_id
+		});
+	}
+	weui.searchPage('#page2', {
+		resultTpl: '#acq-template',
 		loader: function(param, success, error) {
 			$$.request('/action/bm/acq-inst/search', {}, {
 				success: function(data) {
@@ -72,7 +113,8 @@
 			})
 		},
 		onClickItem: function(row) {
-			$('#page1').addClass('page_show');
+			weui.page.hide('page2');
+			weui.page.show('page1');
 			var acq_inst = row.acq_inst_id;
 			weui.searchPage('#page1', {
 				resultTpl: '#list-template',
