--- a/admin/pages/userinfo.html
+++ b/admin/pages/userinfo.html
@@ -108,17 +108,17 @@
                     </tr>
                     <tr>
                         <td>
-                            <label>用户姓名：</label>
+                            <label>昵称：</label>
                         </td>
                         <td>
-                            <input type="text" name="full_name" class="easyui-validatebox" data-options="required:true">
+                            <input type="text" name="nickname" class="easyui-validatebox" data-options="required:true">
                             <span class="required">*</span>
                         </td>
                         <td>
                             <label>登录密码：</label>
                         </td>
                         <td class="readonly editable-add">
-                            <input type="password" name="login_pwd" class="easyui-validatebox" data-options="required:true">
+                            <input type="password" name="login_pwd" class="easyui-validatebox" data-options="">
                             <span class="required">*</span>
                         </td>
                     </tr>
