--- a/m/busi/steps/base.html
+++ b/m/busi/steps/base.html
@@ -189,7 +189,7 @@
 		}
 	}
     $(function() {
-        $('#back-btn').on('click', onBack);
+        //$('#back-btn').on('click', onBack);
         $('#submit-btn').on('click', onSubmit);
         $('#city-picker').on('focus', function() {
             $$.showPicker(this, districtData);
