用户管理调整

--- a/admin/pages/userinfo.html
+++ b/admin/pages/userinfo.html
@@ -19,7 +19,7 @@
                     </caption>
                     <tr>
                         <td>
-                            <label>登录名：</label>
+                            <label>登录名/手机号：</label>
                         </td>
                         <td>
                             <input type="text" name="login_name">
@@ -74,7 +74,7 @@
                         <th data-options="field:'userid'">用户ID</th>
                         <th data-options="field:'login_name'">登录名</th>
                         <th data-options="field:'mobile'">手机号</th>
-                        <th data-options="field:'full_name'">用户姓名</th>
+                        <th data-options="field:'nickname'">昵称</th>
                         <th data-options="field:'fun_role_name'">功能角色</th>
                         <th data-options="field:'data_role_name'">数据角色</th>
                     </tr>
@@ -117,9 +117,8 @@
                         <td>
                             <label>登录密码：</label>
                         </td>
-                        <td class="readonly editable-add">
+                        <td>
                             <input type="password" name="login_pwd" class="easyui-validatebox" data-options="">
-                            <span class="required">*</span>
                         </td>
                     </tr>
                     <tr>
